@@ -1,3 +1,7 @@
+Sun Jun 23 15:38:07 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* bootstraptest/test_thread.rb: rescue resource limitation errors.
+
 Sun Jun 23 08:19:27 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (integer_unpack_single_bdigit): Extracted from
